styles/pwinter.css
@import 'reset.css';

:root {
    --shadow-color: rgba(0, 0, 0, .5);
    --shadow: 0px 0px 20px var(--shadow-color);
    --radius: 25px;

    --colorP: rgba(128, 128, 128, 1);
    --colorW: rgba(128, 128, 128, 1);
    --colorA: rgba(128, 128, 128, 1);

    --colorLight: #FFF;
    --colorDark: #111;
    --border: rgb(128, 128, 128);

    --top-margin: env(titlebar-area-height, 40px);
    --global-padding: 2rem;

}

html {
    background: rgb(175, 175, 175);
    background: linear-gradient(170deg, var(--gradient1), var(--gradient2));
    background-attachment: fixed;
    background-repeat: no-repeat;
    height: 100vh;
}

h1 {
    font-weight: bolder;
}

body {
    padding: 0px;
    margin: 0px auto;
    color: #FFF;
    font-family: 'Courier New', Courier, monospace;
    
}

header {
    color: #FFFFFF;
    background-color: #3A006A;
    padding: 1rem;
    margin-bottom: .5rem;
    position: fixed;
    left: env(titlebar-area-x, 0);
    top: env(titlebar-area-y, 0);
    width: calc(env(titlebar-area-width, 100%));
    height: var(--top-margin);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    justify-self: center;
    -webkit-app-region: drag;
    app-region: drag;
}

main {
    margin: calc(var(--top-margin) + 1rem) auto auto auto;
    background-color: #FFF;
    border-radius: var(--radius);
    box-shadow: var(--shadow);
    display: flex;
    flex-wrap:wrap ;
    flex-direction: column;
    transition: background-color .2s ease-in, padding .2s, margin .2s;
    width: fit-content;
}

#colorSelectionPane {
    display: flex;
    flex-direction: column;
    border: var(--border) solid 7px;
    border-radius: var(--radius);
    box-shadow: inset var(--shadow);
    align-self: center;
    margin: var(--global-padding);
}

#pwaLogo {
    align-self: center;
    margin: 2rem;
    
}

.icon {
    height: 1.1rem;
    cursor: pointer;
    -webkit-app-region: no-drag;
    app-region: no-drag;
    transition: transform .2s ease-in;
}

.icon:hover {
    transform: scale(1.1);
}

.bgBtn {
    height: 3em;
    cursor: pointer;
    transition: transform .2s ease-out;
}

.bgBtn:hover {
    transform: translateY(-5px);
}

#titleBarIcons {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 1rem;
    margin: .5rem .1rem;
}

.logoFooter {
    height: 3rem;
    position: fixed;
    bottom: 30px;
    right: 30px;
    cursor: pointer;
    transition: transform .2s ease-in;
}

.logoFooter:hover {
    transform: scale(1.1);
}

.colorSelectionRow {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: 1em;
    gap: 1.3em;
}

input[type="color"] {
    border: var(--border) solid 1.2px;
    border-radius: 12%;
    height: 3.3rem;
    width: 3.3rem;
    background:var(--border);
    cursor: pointer;
}

@media (pointer: coarse) {
    .icon {
        height: 2rem;
        margin-bottom: 1.5rem;
    }

    #titleBarIcons {
        gap: 2rem;
    }
    
    h1{
        margin: 1rem;
        font-size: 1.2rem;
    }

    header {
        margin: auto;
        height: 85px;
    }

    header h1 {
        font-size: 1.7rem;
    }

    main {
        margin-top: 130px;
        padding-top: 1.5rem;
    }
}

@media (pointer: fine) {
    .icon {
        height: 1.1rem;
    }

    header {
        flex-direction: row;
        align-items: flex-start;
        justify-content: space-between;
        width: calc(env(titlebar-area-width, 100%) - 2em);
        padding: .5rem;
    } 
}

@media (orientation: landscape) {
    main {
        flex-direction: row;
    }
}

